menu implementation with z-index fix

--- a/frontend/scss/style.scss
+++ b/frontend/scss/style.scss
@@ -31,6 +31,7 @@ body {
     width: 100%;
     height: 100px;
     background-color: rgba(0,0,0,0.3);
+    z-index: -10;
 }
 
 .content {
@@ -39,7 +40,9 @@ body {
 
 #header {
     position: relative;
+    z-index: -5;
     #logo {
+        a {display: inline-block; width: 100px}
         h1 {
             display: block;
             width: 93px; 
@@ -103,6 +106,8 @@ body {
         letter-spacing: 1.8px;
     }
 }
+
+@import "menu";
 
 @import "index";
 
